package com.github.androidserialport.communication;

/**
 * 
 * @author Kate
 * 
 */
public interface ITxChannel {
    /**
     * 
     * @param string
     */
    void sendString(String stringToSend);
}
